# z-gauges

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  exports-esp.sh  flake.nix
.cargo/: config.toml
src/: main.rs
ui/: appwindow.slint
