[package]
name = "z-gauges"
version = "0.1.0"
authors = ["Berkeley Martinez"]
edition = "2021"
# build = "build.rs"

[dependencies]
esp-alloc = "0.4.0"
esp-hal = { version = "0.19.0", features = [ "esp32s3" ] }
esp-println = { version = "0.10.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }

[dependencies.slint]
version = "1.7.2"
default-features = false
features = [
  "compat-1-2", 
  "unsafe-single-threaded",
  "libm",
  "renderer-software"
]

[dependencies.esp-backtrace]
version = "0.13.0"
features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] 

[build-dependencies]
slint-build = "1.7.2"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
simulator = ["slint/renderer-winit-software", "slint/backend-winit"]
